# api/logistics/restful/logistics_restful_swagger.yaml
@@ -1,5 +1,13 @@
 basePath: /api
 definitions:
+  deliveries.PatchWithStatusPayload:
+    properties:
+      status:
+        example: delivered
+        type: string
+    required:
+    - status
+    type: object
   github_com_blackhorseya_godine_entity_logistics_model.Delivery:
     properties:
       created_at:
@@ -196,6 +204,52 @@ paths:
       security:
       - Bearer: []
       summary: Get the delivery by id
+      tags:
+      - deliveries
+  /v1/deliveries/{id}/status:
+    patch:
+      consumes:
+      - application/json
+      description: Update the delivery status
+      parameters:
+      - description: delivery id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: delivery status request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/deliveries.PatchWithStatusPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/responsex.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_blackhorseya_godine_entity_logistics_model.Delivery'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responsex.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responsex.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responsex.Response'
+      security:
+      - Bearer: []
+      summary: Update the delivery status
       tags:
       - deliveries
 securityDefinitions:
